--- a/assets/css/Night Club.css
+++ b/assets/css/Night Club.css
@@ -3,102 +3,31 @@
     width: 100%;
 }
 
-.card-wrapper {
-    margin-bottom: 30px;
-}
-
-.card-image .card .card-img-wrapper {
-    height: 100%;
-}
-
-.card-image .card .card-body {
-    display: none;
-}
-
-.card-image-title-description .card .card-img-wrapper {
-    max-height: 160px;
-}
-
-.card-image-title-description .card {
-    position: absolute;
-    min-height: 300px;
-}
-
-.card-image-title-description .card .card-body {
-    height: auto;
-    position: relative;
-    top: 0;
-    margin-bottom: 70px;
-}
-
-.card-image-title-description .card:hover .card-body {
-    top: 70px;
-}
-
-.card-image-title-description .card .card-body .card-title {
-    margin-bottom: .75rem;
-}
-
 .card {
-    display: inline-flex;
-    position: relative;
-    overflow: hidden;
-    min-height: 400px;
-    height: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
 }
 
-.card:hover {
-    box-shadow: 8px 12px 31px -10px #ab98ab;
+.price {
+    color: grey;
+    font-size: 22px;
 }
 
-.card-img-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50%;
-    overflow: hidden;
-}
-
-.card-img-wrapper img {
-    transition: 1.5s ease;
-}
-
-.card:hover .card-img-wrapper img {
-    transform: scale(1.15);
-}
-
-.card-body .card-title {
-    margin-bottom: calc(50% + 40px);
-    transition: 1.5s ease;
-}
-
-.card:hover .card-body .card-title {
-    margin-bottom: .75rem;
-}
-
-.card-body {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 50%;
-    background-color: #fff;
-    transition: 1.5s ease;
-}
-
-.card-content {
-    left: 0;
-    right: 0;
-    overflow: hidden;
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
     width: 100%;
-    height: auto;
-    transition: 1.5s ease;
+    font-size: 18px;
 }
 
-.card:hover .card-body {
-    height: 80%;
-}
-
-.card:hover .card-content {
-    bottom: 0;
+.card button:hover {
+    opacity: 0.7;
 }
