--- a/assets/css/sell form.css
+++ b/assets/css/sell form.css
@@ -1,3 +1,16 @@
+.modal-body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+}
+
+.close {
+    position: absolute;
+    right: -25px;
+    top: -25px;
+}
+
 *,
 *:before,
 *:after {
@@ -11,66 +24,6 @@ html {
 body {
     background: #c1bdba;
     font-family: 'Titillium Web', sans-serif;
-}
-
-a {
-    text-decoration: none;
-    color: #1ab188;
-    transition: .5s ease;
-}
-
-a:hover {
-    color: #179b77;
-}
-
-.form {
-    color: white;
-    background: rgba(19, 35, 47, 0.9);
-    padding: 40px;
-    max-width: 600px;
-    margin: 20px auto;
-    border-radius: 4px;
-    box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
-}
-
-.tab-group {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 40px 0;
-}
-
-.tab-group:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.tab-group li a {
-    display: block;
-    text-decoration: none;
-    padding: 15px;
-    background: rgba(160, 179, 176, 0.25);
-    color: #a0b3b0;
-    font-size: 20px;
-    float: left;
-    width: 50%;
-    text-align: center;
-    cursor: pointer;
-    transition: .5s ease;
-}
-
-.tab-group li a:hover {
-    background: #179b77;
-    color: #ffffff;
-}
-
-.tab-group .active a {
-    background: #1ab188;
-    color: #ffffff;
-}
-
-.tab-content>div:last-child {
-    display: none;
 }
 
 label {
